k8s/databases.yaml
# 3. Déploiement Postgres
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector: { matchLabels: { app: postgres } }
  template:
    metadata: { labels: { app: postgres } }
    spec:
      securityContext:
        fsGroup: 999 # Propriété du volume pour l'utilisateur postgres
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
      - name: postgres
        image: postgres:15
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        resources: # --- AJOUT POUR OPA ---
          limits:
            memory: "512Mi"
          requests:
            memory: "256Mi"
        volumeMounts:
        - name: postgre-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
      volumes:
      - name: postgre-storage
        persistentVolumeClaim: { claimName: postgres-pvc }
---
# 4. Déploiement MySQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector: { matchLabels: { app: mysql } }
  template:
    metadata: { labels: { app: mysql } }
    spec:
      securityContext:
        fsGroup: 999
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
      - name: mysql
        image: mysql:8
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        resources: # --- AJOUT POUR OPA ---
          limits:
            memory: "512Mi"
          requests:
            memory: "256Mi"
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
          subPath: mysql-data # --- AJOUTÉ pour éviter l'erreur lost+found ---
      volumes:
      - name: mysql-storage
        persistentVolumeClaim: { claimName: mysql-pvc }
