k8s/backend-services.yaml
# 1. USER-SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
      - name: user-service
        image: registry.gitlab.com/devsecopsi-group/devsecops-project/user-service:latest
        securityContext:      # <--- IL FAUT LE METTRE ICI (DANS LE CONTAINER)
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false # Optionnel mais recommandé
        ports:
        - containerPort: 8081
        resources:
          limits: { memory: "512Mi" }
          requests: { memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels: { app: backend-pfe }
spec:
  selector: { app: user-service }
  ports: [{ name: http-web, port: 8081, targetPort: 8081 }]
---

# 2. COURSE-SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
spec:
  replicas: 1
  selector: { matchLabels: { app: course-service } }
  template:
    metadata: { labels: { app: course-service } }
    spec:
      imagePullSecrets: [{ name: gitlab-registry-secret }]
      containers:
      - name: course-service
        image: registry.gitlab.com/devsecopsi-group/devsecops-project/course-service:latest
        securityContext:      # <--- DANS LE CONTAINER
          runAsNonRoot: true
          runAsUser: 1000
        ports: [{ containerPort: 8082 }]
        resources:
          limits: { memory: "512Mi" }
          requests: { memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: course-service
  labels: { app: backend-pfe }
spec:
  selector: { app: course-service }
  ports: [{ name: http-web, port: 8082, targetPort: 8082 }]
---

# 3. ANSWER-SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: answer-service
spec:
  replicas: 1
  selector: { matchLabels: { app: answer-service } }
  template:
    metadata: { labels: { app: answer-service } }
    spec:
      imagePullSecrets: [{ name: gitlab-registry-secret }]
      containers:
      - name: answer-service
        image: registry.gitlab.com/devsecopsi-group/devsecops-project/answer-service:latest
        securityContext:      # <--- DANS LE CONTAINER
          runAsNonRoot: true
          runAsUser: 1000
        ports: [{ containerPort: 8083 }]
        resources:
          limits: { memory: "512Mi" }
          requests: { memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: answer-service
  labels: { app: backend-pfe }
spec:
  selector: { app: answer-service }
  ports: [{ name: http-web, port: 8083, targetPort: 8083 }]
---

# 4. EXAM-SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-service
spec:
  replicas: 1
  selector: { matchLabels: { app: exam-service } }
  template:
    metadata: { labels: { app: exam-service } }
    spec:
      imagePullSecrets: [{ name: gitlab-registry-secret }]
      containers:
      - name: exam-service
        image: registry.gitlab.com/devsecopsi-group/devsecops-project/exam-service:latest
        securityContext:      # <--- DANS LE CONTAINER
          runAsNonRoot: true
          runAsUser: 1000
        ports: [{ containerPort: 8084 }]
        resources:
          limits: { memory: "512Mi" }
          requests: { memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: exam-service
  labels: { app: backend-pfe }
spec:
  selector: { app: exam-service }
  ports: [{ name: http-web, port: 8084, targetPort: 8084 }]
