k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
      - name: frontend
        image: registry.gitlab.com/devsecopsi-group/devsecops-project/frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
          requests:
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer # DigitalOcean va générer une IP publique réelle
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
