k8s/infrastructure.yaml
# 1. Eureka Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-service
spec:
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
      - name: eureka-service
        image: registry.gitlab.com/devsecopsi-group/devsecops-project/eureka-service:latest
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-service
  ports:
    - port: 8761
---
# 2. API Gateway (La porte d'entrée Cloud)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
spec:
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
      - name: api-gateway-service
        image: registry.gitlab.com/devsecopsi-group/devsecops-project/api-gateway-service:latest
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  type: LoadBalancer # DigitalOcean va te donner une IP publique ici
  selector:
    app: api-gateway-service
  ports:
    - port: 80
      targetPort: 8090
