k8s/opa-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: enforce-ram-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    excludedNamespaces:
      - "monitoring"
      - "gatekeeper-system"
      - "kube-system"
      - "falco"
      - "logging"
      - "default"
